upto header tags

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Coding Depot is a venture created to develop logical thinking of the young minds and keep then knowledge enough to make them expert in IT.">
+    <meta name="keywords" content="Computer classes for teenagers, grade 6 to 12 online coding classes near me, coding classes near me">
+    <meta name="author" content="Harpreet Singh">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Coding Depot - About Us(Harpreet Singh)</title>
+    <title>Coding Depot - About Us</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207971361-1"></script>
 <script>
@@ -24,7 +26,6 @@
     })(window,document,'script','dataLayer','GTM-W2R2DMD');</script>
     <!-- End Google Tag Manager -->
 </head>
-
 <body>
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2R2DMD"
