--- a/contactus.html
+++ b/contactus.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="We are open 24x7 for your queries. You can fill out our online form or can call us today.">
+    <meta name="keywords" content="Contact details for coding depot. Phone number of coding depot, contact form of coding depot">
+    <meta name="author" content="Harpreet Singh">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Coding Depot - Contact Us (Harpreet Singh)</title>
+    <title>Contact Details - Coding Depot</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207971361-1"></script>
 <script>
