--- a/courses.html
+++ b/courses.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Learn coding from scratch online from industries experts. We offer 1:1 classes. No charges for first class.">
+    <meta name="keywords" content="Computer classes for teenagers, grade 6 to 12 online coding classes near me, coding classes near me">
+    <meta name="author" content="Harpreet Singh">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Coding Depot - Courses (Harpreet Singh)</title>
