--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Learn coding from scratch online from industries experts. We offer 1:1 classes. No charges for first class.">
+    <meta name="keywords" content="Computer classes for teenagers, grade 6 to 12 online coding classes near me, Vedic Maths classes near me, coding classes near me">
+    <meta name="author" content="Harpreet Singh">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Coding Depot - Home Page(Harpreet Singh)</title>
+    <title>Coding Depot - Home Page </title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207971361-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-207971361-1');
 </script>
 <!-- Google Tag Manager -->
@@ -24,7 +26,6 @@
     })(window,document,'script','dataLayer','GTM-W2R2DMD');</script>
     <!-- End Google Tag Manager -->
 </head>
-
 <body>
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2R2DMD"
