--- a/vedicm.html
+++ b/vedicm.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Learn Vedic Maths online from industries experts. We offer 1:1 classes">
+    <meta name="keywords" content="Vedic Maths Classes in brampton,maths tutoring, Vedic online clasess near me">
+    <meta name="author" content="Harpreet Singh">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Coding Depot - Vedic Maths (Harpreet Singh)</title>
+    <title>Coding Depot - Vedic Maths </title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207971361-1"></script>
 <script>
