--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                 <div class="row featurette d-flex justify-content-center align-items-center">
                     <div class="col-md-7 ">
                         <h2 class="featurette-heading">Designed for learning <span class="text-muted">Practical Exposure</span></h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis modi ex sapiente cumque facilis nobis maiores, ipsa ut? Repellat perspiciatis est eum libero, dolore deserunt nobis in corporis iusto consectetur?</p>
+            <p class="lead">Ask us a question that you’re stuck on and we’ll connect you with a tutor that knows how to solve your problem. Meet up with a tutor in the online classroom and be able to go over your problem in real time through our interactive whiteboard. Here, you’ll be able to file-share, document download and sidebar message to get the most out of your personalized tutoring session. </p>
         </div>
         <div class="col-md-5">
-            <img src="images/index3.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+            <img src="images/index3.jpeg" alt="kids performing coding Image1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
 
         </div>
     </div>
@@ -111,7 +111,7 @@
             <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam similique quidem sit dolor. Ipsa atque, similique sapiente veritatis rem eius quos necessitatibus aut at, fugit fugiat distinctio, adipisci totam aperiam?</p>
         </div>
         <div class="col-md-5 order-md-1">
-            <img src="images/index2.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+            <img src="images/index2.jpeg" alt="kids performing coding Image2" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
 
         </div>
     </div>
@@ -122,7 +122,7 @@
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque consequuntur temporibus explicabo vel. Magni, tempore, consectetur veritatis cum ipsum id, aliquid vitae unde nesciunt eum dolorem illum quibusdam doloribus nam.</p>
         </div>
         <div class="col-md-5 ">
-            <img src="images/index1.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+            <img src="images/index1.jpeg" alt="kids performing coding Image3" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
         </div>
     </div>
 
