--- a/code612.html
+++ b/code612.html
@@ -98,8 +98,8 @@
             <div class="container my-4">
                 <div class="row featurette d-flex justify-content-center align-items-center">
                     <div class="col-md-7 ">
-                        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+                        <h2 class="featurette-heading">Intro to Python:<span class="text-muted"> Robohacker</span></h2>
+            <p class="lead">Use Python code to hack into the mainframe of a hostile enemy! Learn the basics of Python programming using loops, conditionals, arrays and more! </p>
         </div>
         <div class="col-md-5">
             <img src="images/index3.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
@@ -109,23 +109,14 @@
     <hr class="featurette-divider">
     <div class="row featurette d-flex justify-content-center align-items-center">
         <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+            <h2 class="featurette-heading">Game Programming 1 With  <span class="text-muted">Python</span></h2>
+            <p class="lead">In this beginner level Python Programming course, students will create a fun 2D game from the ground up. Students will build the entire game from scratch using Python code and learn about functions, loops, collision detection, game logic and more!</p>
         </div>
         <div class="col-md-5 order-md-1">
             <img src="images/index2.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
 
         </div>
     </div>
-    <hr class="featurette-divider">
-    <div class="row featurette d-flex justify-content-center align-items-center">
-        <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
-        </div>
-        <div class="col-md-5 ">
-            <img src="images/index1.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
-        </div>
     </div>
 
     </div>
