--- a/price.html
+++ b/price.html
@@ -95,7 +95,7 @@
 <main>
     <div class="container-fluid">
   <h2>Flexible plans for any Schedule</h2>
-  <p class="pricepara">Learn to create with code, at your pace, on your schedule. All memberships<br> include unlimited access to Codeverse Studio, on-demand content, and live streams.</p>
+  <p class="pricepara">Learn to create with code, at your pace, on your schedule. All memberships<br> include unlimited access to Coding Depot Studio, on-demand content, and live streams.</p>
   </div>
   <section>
     <div class="card" style="width: 18rem;">
