Commit on 13th NOv

--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Harpreet Singh">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Coding Depot - About Us</title>
+    <title>Coding Depot - Best Coding Institute in Brampton</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207971361-1"></script>
 <script>
@@ -82,7 +82,7 @@
     <!-- Nav Bar ends -->
     <!-- hero image and Call to action Image begins-->
     <div class="cantainer">
-        <img src="images/slide4.jpeg" class="img-fluid hpImage w-100 heroimg" alt="heroimage">
+        <img src="images/slide4.jpeg" class="img-fluid hpImage w-100 heroimg" alt="online coding classes for kids">
         <div class="container-fluid call-heading-aboutus">
             <p class="h1">1:1 Online <br/> Coding Classes</p>
             <span class="h4">Book your free demo class now.<br/>We believe in learning by doing. <br />Pay per class. Each class is for 1 hour and 30 minutes.<span>
