--- a/code612.html
+++ b/code612.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand namesize" href="index.html">
-                <img src="images/logo3.png" alt="Logo of Coding Depot" class="d-inline-block align-text-top">Coding Depot
+                <img src="images/logo3.png" alt="Logo of Coding Depot Best coding classes near me" class="d-inline-block align-text-top">Coding Depot
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -84,7 +84,7 @@
     <!-- Nav Bar ends -->
     <!-- hero image and Call to action Image begins-->
     <div class="cantainer">
-        <img src="images/Slide1.jpeg" class="img-fluid hpImage w-100 heroimg" alt="heroimage">
+        <img src="images/Slide1.jpeg" class="img-fluid hpImage w-100 heroimg" alt="online coding classes for grade 6 to 12">
         <div class="container-fluid call-heading">
             <p class="h1">1:1 Online <br/> Coding Classes</p>
             <span class="h4">Book your free demo class now.<br/>We believe in learning by doing. <br />Pay per class. Each class is for 1 hour and 30 minutes.<span>
