--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn coding from scratch online from industries experts. We offer 1:1 classes. No charges for first class.">
-    <meta name="keywords" content="Computer classes for teenagers, grade 6 to 12 online coding classes near me, Vedic Maths classes near me, coding classes near me">
+    <meta name="keywords" content="Coding classes, Computer classes for teenagers, grade 6 to 12 online coding classes near me, Vedic Maths classes near me, coding classes near me">
     <meta name="author" content="Harpreet Singh">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Coding Depot - Home Page </title>
+    <title>Coding Depot - How to become web developer </title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207971361-1"></script>
 <script>
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand namesize" href="index.html">
-                <img src="images/logo3.png" alt="Logo of Coding Depot" class="d-inline-block align-text-top">Coding Depot
+                <img src="images/logo3.png" alt="Logo of Coding Depot Best coding classes near me" class="d-inline-block align-text-top">Coding Depot
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -82,7 +82,7 @@
     <!-- Nav Bar ends -->
     <!-- hero image and Call to action Image begins-->
     <div class="cantainer">
-        <img src="images/slide3.jpeg" class="img-fluid hpImage w-100 heroimg" alt="heroimage">
+        <img src="images/slide3.jpeg" class="img-fluid hpImage w-100 heroimg" alt="online coding classes in Ontario">
         <div class="container-fluid call-heading">
             <p class="h1">1:1 Online <br/> Coding Classes</p>
             <span class="h4">Book your free demo class now.<br/>We believe in learning by doing. <br />Pay per class. Each class is for 1 hour and 30 minutes.<span>
@@ -100,7 +100,7 @@
             <p class="lead">Ask us a question that you’re stuck on and we’ll connect you with a tutor that knows how to solve your problem. Meet up with a tutor in the online classroom and be able to go over your problem in real time through our interactive whiteboard. Here, you’ll be able to file-share, document download and sidebar message to get the most out of your personalized tutoring session. </p>
         </div>
         <div class="col-md-5">
-            <img src="images/index3.jpeg" alt="kids performing coding Image1" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
+            <img src="images/index3.jpeg" alt="kids performing coding " class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500">
 
         </div>
     </div>
