--- a/price.html
+++ b/price.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="We offer affordable packages for our students , you can choose one according to course duration and affordability.">
-    <meta name="keywords" content="About Coding Depot, Coding depot History">
+    <meta name="keywords" content="free demo class for kids, About Coding Depot, Coding depot History">
     <meta name="author" content="Harpreet Singh">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Coding Depot - Course Price </title>
+    <title>Cheapest Academy in Ontario - Price</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207971361-1"></script>
 <script>
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand namesize" href="index.html">
-                <img src="images/logo3.png" alt="Logo of Coding Depot" class="d-inline-block align-text-top">Coding Depot
+                <img src="images/logo3.png" alt="Computer courses charges" class="d-inline-block align-text-top">Coding Depot
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -84,7 +84,7 @@
     <!-- Nav Bar ends -->
     <!-- hero image and Call to action Image begins-->
     <div class="cantainer">
-        <img src="images/Slide1.jpeg" class="img-fluid hpImage w-100 heroimg" alt="heroimage">
+        <img src="images/Slide1.jpeg" class="img-fluid hpImage w-100 heroimg" alt="free demo class at coding depot">
         <div class="container-fluid call-heading">
             <p class="h1">Most Creative <br/> Membership ever...</p>
             <span class="h4">Join our community of lifelong creators. <br>All memberships include 1:1 virtual classes,<br> unlimited access to Codeverse Studio, on-demand content, and live streams.<span>
