--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <div class="container-fluid">
             <h5>Coding Depot Inc. &copy All Rights Reserved .</h5>
             <p> Website designed by: Harpreet Singh - 201908442</p>
+            <a href="#"><img src="images/fb.png" width="50" height="50"></a>
         </div>
     </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
