--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="container-fluid">
             <h5>Coding Depot Inc. &copy All Rights Reserved .</h5>
             <p> Website designed by: Harpreet Singh - 201908442</p>
-            <a href="https://www.facebook.com/Coding-Depot-102396742246514"><img src="images/fb.png" width="50" height="50"></a><a href="https://www.instagram.com/codingdepotmcit/"><img src="images/insta.png" width="50" height="50"></a><a href="https://www.youtube.com/channel/UCBSzOHK47MMsb93o9RfzlgQ"><img src="images/youtube.png" width="50" height="50"></a>
+            <a href="https://www.facebook.com/Coding-Depot-102396742246514" title="Facebook Link of Coding Depot"><img src="images/fb.png" width="50" height="50"></a><a href="https://www.instagram.com/codingdepotmcit/" title="Instagram Link of Coding Depot"><img src="images/insta.png" width="50" height="50"></a><a href="https://www.youtube.com/channel/UCBSzOHK47MMsb93o9RfzlgQ" title="Youtube Link of Coding Depot"><img src="images/youtube.png" width="50" height="50"></a>
         </div>
     </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
