--- a/code25.html
+++ b/code25.html
@@ -102,6 +102,7 @@
         <div class="container-fluid">
             <h5>Coding Depot Inc. &copy All Rights Reserved .</h5>
             <p> Website designed by: Harpreet Singh - 201908442</p>
+            <a href="https://www.facebook.com/Coding-Depot-102396742246514" title="Facebook Link of Coding Depot"><img src="images/fb.png" alt="facebook link for coding depot" width="50" height="50"></a><a href="https://www.instagram.com/codingdepotmcit/" title="Instagram Link of Coding Depot"><img src="images/insta.png" width="50" height="50" alt="Instagram link of Coding Depot" ></a><a href="https://www.youtube.com/channel/UCBSzOHK47MMsb93o9RfzlgQ" title="Youtube Link of Coding Depot"><img src="images/youtube.png" width="50" height="50" alt="Youtube link for coding Depot"></a>
         </div>
     </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
